--- a/frontend/package.json
+++ b/frontend/package.json
@@ -19,6 +19,7 @@
     "react-dom": "^18.2.0",
     "react-google-recaptcha": "^3.1.0",
     "react-hook-form": "^7.45.1",
+    "react-hot-toast": "^2.4.1",
     "react-router-dom": "^6.18.0",
     "rsuite": "^5.64.1",
     "yup": "^1.2.0"
