--- a/frontend/package.json
+++ b/frontend/package.json
@@ -18,6 +18,7 @@
     "moment": "^2.30.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-fast-marquee": "^1.6.5",
     "react-google-recaptcha": "^3.1.0",
     "react-hook-form": "^7.45.1",
     "react-hot-toast": "^2.4.1",
