--- a/frontend/.env
+++ b/frontend/.env
@@ -1,3 +1,5 @@
-NODE_ENV=development
-VITE_USER_GOOGLE_CAPTCHA_SITE_KEY=6LeM9_gpAAAAABqVJw40rI20_6J1y7VWMixBe_hR
-VITE_USER_GOOGLE_CAPTCHA_SECRET_KEY=6LeM9_gpAAAAAH7RWrWTIeIyiaMVE7mZMUOI6e83
+NODE_ENV=production
+VITE_USER_GOOGLE_CAPTCHA_SITE_KEY=6Le4vwsqAAAAAG70TbImM4ZBjHZUSXTSuSGVob_o
+VITE_USER_GOOGLE_CAPTCHA_SECRET_KEY=6Le4vwsqAAAAAB_lV9XhPLx0C3C2VErpD-Uy72LJ
+# VITE_USER_GOOGLE_CAPTCHA_SITE_KEY=6LeM9_gpAAAAABqVJw40rI20_6J1y7VWMixBe_hR
+# VITE_USER_GOOGLE_CAPTCHA_SECRET_KEY=6LeM9_gpAAAAAH7RWrWTIeIyiaMVE7mZMUOI6e83
