--- a/backend/composer.json
+++ b/backend/composer.json
@@ -10,11 +10,11 @@
         "laravel/framework": "^11.9",
         "laravel/sanctum": "^4.0",
         "laravel/tinker": "^2.9",
-        "maatwebsite/excel": "^3.1",
         "spatie/laravel-csp": "^2.10",
         "spatie/laravel-pdf": "^1.5",
         "spatie/laravel-permission": "^6.7",
         "spatie/laravel-query-builder": "^6.0",
+        "spatie/simple-excel": "^3.6",
         "stevebauman/purify": "^6.2"
     },
     "require-dev": {
