--- a/docker/docker-compose.yml
+++ b/docker/docker-compose.yml
@@ -1,5 +1,3 @@
-version: '3.8'
-
 networks:
   klwb_laravel:
 
@@ -24,8 +22,7 @@ services:
     container_name: klwb_admin
     depends_on:
       - mysql
-    # image: phpmyadmin/phpmyadmin
-    image: arm64v8/phpmyadmin
+    image: phpmyadmin/phpmyadmin
     restart: always
     ports:
       - '8086:80'
