--- a/frontend/package.json
+++ b/frontend/package.json
@@ -25,6 +25,7 @@
     "react-pdf": "^9.1.0",
     "react-photo-view": "^1.2.6",
     "react-router-dom": "^6.18.0",
+    "react-select-async-paginate": "^0.7.6",
     "rsuite": "^5.64.1",
     "yup": "^1.2.0"
   },
