--- a/backend/composer.json
+++ b/backend/composer.json
@@ -11,6 +11,7 @@
         "laravel/framework": "^11.9",
         "laravel/sanctum": "^4.0",
         "laravel/tinker": "^2.9",
+        "spatie/laravel-activitylog": "^4.9",
         "spatie/laravel-csp": "^2.10",
         "spatie/laravel-permission": "^6.7",
         "spatie/laravel-query-builder": "^6.0",
