removed capctah verification in backend and changed the env values in frontend

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,4 +1,5 @@
 {
   "editor.tabSize": 1,
-  "editor.insertSpaces": false
+  "editor.insertSpaces": false,
+  "postman.settings.dotenv-detection-notification-visibility": false
 }
