--- a/docker/docker-compose.yml
+++ b/docker/docker-compose.yml
@@ -5,7 +5,7 @@ networks:
 services:
 
   mysql:
-    image: mariadb:10.5.8
+    image: mysql/mysql-server:8.0
     container_name: klwb_mysql
     restart: unless-stopped
     tty: true
@@ -13,6 +13,7 @@ services:
       - "4306:3306"
     volumes:
       - ./mysql:/var/lib/mysql
+    command: --default-authentication-plugin=mysql_native_password
     env_file:
       - .env
     networks:
