--- a/backend/public/.htaccess
+++ b/backend/public/.htaccess
@@ -4,6 +4,8 @@
     </IfModule>
 
     RewriteEngine On
+    # RewriteBase /backend/
+
 
     # Handle Authorization Header
     RewriteCond %{HTTP:Authorization} .
