--- a/frontend/package.json
+++ b/frontend/package.json
@@ -14,6 +14,7 @@
     "@rsuite/icons": "^1.0.3",
     "@tanstack/react-query": "^5.28.9",
     "axios": "^1.6.0",
+    "he": "^1.2.0",
     "lodash.debounce": "^4.0.8",
     "moment": "^2.30.1",
     "react": "^18.2.0",
@@ -30,6 +31,7 @@
     "yup": "^1.2.0"
   },
   "devDependencies": {
+    "@types/he": "^1.2.3",
     "@types/lodash.debounce": "^4.0.9",
     "@types/node": "^20.14.2",
     "@types/react": "^18.2.66",
